--- a/_includes/disqus_comments.html
+++ b/_includes/disqus_comments.html
@@ -3,7 +3,7 @@
   <div id="disqus_thread"></div>
   <script>
     var disqus_config = function () {
-      this.page.url = '{{ page.url | absolute_url }}';
+      this.page.url = '{{ page.absolute_url }}';
       this.page.identifier = '{{ site.disqus.shortname }}';
     };
 
